# winit_open_file

./: Cargo.toml  LICENSE.md  Readme.md  build_mac.sh
bundle-extra/Contents/: Info.plist
src/: main.rs
